--- a/Develop/CSS/style.css
+++ b/Develop/CSS/style.css
@@ -12,12 +12,30 @@ textarea {
   padding: 10px;
 }
 
+.container {
+  max-width: 1000px;
+  margin-bottom: 20px;
+}
+
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-bottom: 10px solid black;
+  margin-bottom: 30px;
+}
+
 .description {
   white-space: pre-wrap;
 }
 
-.time-block {
+.time-div {
   border-radius: 15px;
+}
+
+.time-block {
+  text-align: left;
 }
 
 .row {
@@ -28,6 +46,7 @@ textarea {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  text-align: right;
 }
 
 .past {
